Fixing humberger icon vertical aligning with firefox, fixing tags page

--- a/public/sass/partials/_nav.scss
+++ b/public/sass/partials/_nav.scss
@@ -32,11 +32,17 @@
                     justify-content: center;
                     width: 100%;
                 }
+
+                .icon-container {
+                    align-items: center;
+                    display: flex;
+                }
             }
         }
     }
 
     .nav__hamburger {
+        align-items: center;
         background: $monokaiBlue;
         border: none;
         bottom: 100px;
