--- a/public/sass/partials/_tags.scss
+++ b/public/sass/partials/_tags.scss
@@ -20,13 +20,11 @@
                     color: #fff;
                 }
             }
-            &--active {
-                span {
-                    &.name {
-                        background: $monokaiBlue;
-                        color: #fff;
-                    }
-                }
+        }
+        .is-active {
+            .name {
+                background: $monokaiBlue;
+                color: #fff;
             }
         }
     }
